[FIX]Se agregaron los estados solicitados al flujo de trabajo de la orden de venta [FIX]Se corrigieron todas las vista para adaptarlas a los nuevos estados(Visibilidad y Edición) [FIX]Se añadió la funcionalidad de cambio para el estado de Entregado cuando se han validado todas las salidas de transferencias correspondientes a la órden. [FIX]Se sobrescribió el método _get_to_invoice_qty que devuelve la cantidad a facturar ya que no se generaban las facturas porque no tenía en cuenta el nuevo estado Entregado [FIX]Se sobrescribió el método _get_invoiced encargado de computar los estados de facturación de la orden

--- a/addons/eor_sale/i18n/es.po
+++ b/addons/eor_sale/i18n/es.po
@@ -31,3 +31,13 @@ msgstr "Cotización"
 #: selection:sale.order,state:0 selection:sale.report,state:0
 msgid "Quotation Sent"
 msgstr "Cotización enviada"
+
+#. module: eor_sale
+#: selection:sale.order,state:0
+msgid "Ingressed"
+msgstr "Ingresado"
+
+#. module: eor_sale
+#: selection:sale.order,state:0
+msgid "Delivered"
+msgstr "Entregado"
